General changes to the ipynb example files.

--- a/ConstructionExample2.ipynb
+++ b/ConstructionExample2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -263,12 +263,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "23874f2f85454c498df0fae51d88e5bb",
+       "model_id": "04693cdec6414a7e846789fed6383d0f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "S2Sketch(height=600, objects='[{\"type\": \"DiskS2\", \"disk\": [1.05, 0, 0, 1], \"b1\": [0.0, -0.0, -1.0], \"b2\": [0.0…"
+       "S2Sketch(height=600, objects='[{\"type\": \"DiskS2\", \"disk\": [1.05, 0, 0, -1], \"b1\": [0.0, -0.0, -1.0], \"b2\": [0.…"
       ]
      },
      "metadata": {},
@@ -281,9 +281,9 @@
     "\n",
     "viewer = S2Viewer(600,600)\n",
     "\n",
-    "disk0 = DiskS2(1.05,0,0,1)\n",
-    "disk1 = DiskS2(0,1.05,0,1)\n",
-    "disk2 = DiskS2(0,0,1.05,1)\n",
+    "disk0 = DiskS2(1.05,0,0,-1)\n",
+    "disk1 = DiskS2(0,1.05,0,-1)\n",
+    "disk2 = DiskS2(0,0,1.05,-1)\n",
     "\n",
     "viewer.addAll([disk0, disk1, disk2])\n",
     "viewer.addAll([d.directionE3.v.toPointE3() for d in [disk0, disk1, disk2]])\n",
@@ -291,8 +291,16 @@
     "    print(tuple(d.normedBasis3.v))\n",
     "for v in [d.directionE3.v for d in [disk0, disk1, disk2]]:\n",
     "    print(tuple(v))\n",
+    "viewer.addAll([d.dualPointOP3.toPointE3() for d in [disk0, disk1, disk2]])\n",
     "viewer.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
