--- a/ExampleConstruction.ipynb
+++ b/ExampleConstruction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -152,6 +152,8 @@
        "//                 0, 0, 0, 1\n",
        "//             );\n",
        "            \n",
+       "            // THIS HACK MAKES IT WORK IN p5.js\n",
+       "            // BUT THE CORRECT CODE IS ABOVE.\n",
        "            p.applyMatrix(\n",
        "                b1[0], b1[1], b1[2], 0,\n",
        "                b2[0], b2[1], b2[2], 0,\n",
@@ -182,6 +184,26 @@
        "            }\n",
        "            p.ellipse(0, 0, diameter, diameter, 48);\n",
        "            \n",
+       "        }\n",
+       "        \n",
+       "        p.drawPolygon = function(polygonData) {\n",
+       "            let polygon = polygonData[\"vertices\"];\n",
+       "            p.beginShape();\n",
+       "            polygon.forEach(v => {\n",
+       "                p.vertex(v[0], v[1], v[2]);\n",
+       "            });\n",
+       "            p.endShape();\n",
+       "        }\n",
+       "        \n",
+       "        p.drawPolygons = function (polygonsData) {\n",
+       "            let polygons = polygonsData[\"polygons\"];\n",
+       "            polygons.forEach(polygon => {\n",
+       "                p.beginShape();\n",
+       "                polygon.forEach(v => {\n",
+       "                    p.vertex(v[0], v[1], v[2]);\n",
+       "                });\n",
+       "                p.endShape();\n",
+       "            });\n",
        "        }\n",
        "\n",
        "        p.draw = function () {\n",
@@ -219,7 +241,8 @@
        "            p.noStroke();\n",
        "            p.lights();\n",
        "            //p.sphereDetail(200);\n",
-       "            p.sphere(0.999, 96, 64);\n",
+       "            if (model.get('showSphere'))\n",
+       "                p.sphere(0.999, 96, 64);\n",
        "            //p.sphereDetail(30);\n",
        "            \n",
        "            p.objs.forEach(obj => {\n",
@@ -230,6 +253,8 @@
        "                switch (obj[\"type\"]) {\n",
        "                    case \"DiskS2\": p.drawDiskS2(obj); break;\n",
        "                    case \"PointE3\": p.drawPointE3(obj); break;\n",
+       "                    case \"Polygons\": p.drawPolygons(obj); break;\n",
+       "                    case \"Polygon\": p.drawPolygon(obj); break;\n",
        "                    default: console.log(obj[\"type\"] + \" is not drawable in this sketch.\");\n",
        "                }\n",
        "                p.pop();\n",
@@ -249,7 +274,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c6e950919d2243aab4dc7865892bf856",
+       "model_id": "57f6189c6ca142a0bd16983326e34a10",
        "version_major": 2,
        "version_minor": 0
       },
@@ -265,7 +290,7 @@
     "# A quick sample construction to showcase how to use koebe.py\n",
     "\n",
     "from koebe.geometries.spherical2 import *\n",
-    "from koebe.graphics.spherical2viewer import *\n",
+    "from koebe.grewer import *\n",
     "\n",
     "disks = [DiskS2(1.05,0,0,1), DiskS2(0,1.05,0,1), DiskS2(0,0,1.05,1), DiskS2(.633,.633,.633,1)]\n",
     "cps = [CPlaneS2.throughThreeDiskS2(disks[0], disks[1], disks[2]),\n",
@@ -275,17 +300,52 @@
     "\n",
     "viewer = S2Viewer(600,600)\n",
     "\n",
+    "#viewer.toggleSphere() # Hide the sphere\n",
+    "\n",
     "viewer.addAll(disks)\n",
     "\n",
-    "viewer.setStyle(disks[0], makeStyle(\"#0000ff\", 2))\n",
-    "viewer.setStyle(disks[1], makeStyle(\"#00ff00\", 2))\n",
-    "viewer.setStyle(disks[2], makeStyle(\"#ffff00\", 2))\n",
-    "viewer.setStyle(disks[3], makeStyle(\"#ff00ff\", 2))\n",
+    "viewer.addAll([disk.dualPointOP3 for disk in disks])\n",
     "\n",
     "viewer.addAll(cps)\n",
     "\n",
     "viewer.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "viewer.toggleSphere()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.756097560975604"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "disks[0].inversiveDistTo(disks[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
