Tutte embedding example notebook.

--- a/Tutte_Embeddings.ipynb
+++ b/Tutte_Embeddings.ipynb
@@ -2,42 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from koebe.algorithms.incrementalConvexHull import tetrahedron, randomConvexHullE3\n",
+    "from koebe.algorithms.incrementalConvexHull import randomConvexHullE3\n",
+    "from koebe.algorithms.tutteEmbeddings import tutteEmbeddingE2\n",
     "from koebe.geometries.euclidean2 import PointE2, SegmentE2\n",
-    "import math\n",
     "\n",
     "poly = randomConvexHullE3(100)\n",
     "poly.outerFace = poly.verts[0].remove()\n",
     "\n",
-    "poly.reorderVerticesByBoundaryFirst()\n",
-    "\n",
-    "boundaryVerts = poly.boundaryVerts()\n",
-    "\n",
-    "k = len(boundaryVerts)\n",
-    "boundaryCoords = [[math.cos(theta), math.sin(theta)]\n",
-    "                  for theta in [i * 2 * math.pi / k for i in range(k)]]\n",
-    "\n",
-    "# Tutte embedding:\n",
-    "import numpy as np\n",
-    "L = np.matrix(poly.laplacian())\n",
-    "P1 = np.matrix(boundaryCoords)\n",
-    "L1 = L[0:k,0:k]\n",
-    "B = L[k:,0:k]\n",
-    "L2 = L[k:,k:]\n",
-    "P2 = -np.linalg.inv(L2)*B*P1\n",
-    "P = np.concatenate((P1, P2))\n",
-    "\n",
-    "for i in range(len(poly.verts)):\n",
-    "    poly.verts[i].data = PointE2(P[i,0],P[i,1])"
+    "tutteGraph = tutteEmbeddingE2(poly)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -254,12 +235,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c9a13a81d8254f969c3a4901947f934c",
+       "model_id": "3f5c868ac22342799cbb31d76e919eff",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "E2Sketch(height=500, objects='[{\"type\": \"SegmentE2\", \"endpoints\": [[0.18615149374852624, -0.36294609305884257]…"
+       "E2Sketch(height=500, objects='[{\"type\": \"SegmentE2\", \"endpoints\": [[-0.4326004383213151, -0.15583135419793673]…"
       ]
      },
      "metadata": {},
@@ -270,7 +251,7 @@
     "from koebe.graphics.euclidean2viewer import UnitScaleE2Sketch, makeStyle\n",
     "viewer = UnitScaleE2Sketch()\n",
     "#viewer.addAll([v.data for v in poly.verts])\n",
-    "segments = [SegmentE2(e.aDart.origin.data, e.aDart.twin.origin.data) for e in poly.edges]\n",
+    "segments = [SegmentE2(e.aDart.origin.data, e.aDart.twin.origin.data) for e in tutteGraph.edges]\n",
     "viewer.addAll(segments)\n",
     "for seg in segments:\n",
     "    viewer.setStyle(seg, makeStyle(stroke=\"#000\", strokeWeight=0.5))\n",
